[tool.poetry]
name = "pinetree"
version = "0.1.0"
description = "Practicing implementing ML algorithms in a Python library"
authors = ["Peter Shen <peterzhuo.shen@gmail.com>"]
license = "Apache"
readme = "README.md"
packages = [{include = "pinetree"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.0"
matplotlib = "^3.8.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
tox = "^4.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
